--- a/app/output.css
+++ b/app/output.css
@@ -789,6 +789,18 @@ video {
   width: 9rem;
 }
 
+.w-32 {
+  width: 8rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -1084,6 +1096,16 @@ video {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+
 .p-16 {
   padding: 4rem;
 }
@@ -1338,6 +1360,16 @@ video {
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.text-slate-900 {
+  --tw-text-opacity: 1;
+  color: rgb(15 23 42 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1787,16 +1819,16 @@ a {
     line-height: 2rem;
   }
 
-  .md\:\[width\:80vw\] {
-    width: 80vw;
-  }
-
-  .md\:\[width\:66rem\] {
-    width: 66rem;
-  }
-
   .md\:\[width\:33rem\] {
     width: 33rem;
+  }
+
+  .md\:\[width\:36rem\] {
+    width: 36rem;
+  }
+
+  .md\:\[width\:39rem\] {
+    width: 39rem;
   }
 }
 
